{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "c62abf9d-d183-4e2f-9a59-433a4236e7ed",
            "actions": [
                {
                    "name": "TouchPosition",
                    "type": "Value",
                    "id": "3813d5c8-7a8c-473f-993b-aa6bc2f9847b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TouchStart",
                    "type": "Button",
                    "id": "cd6eb0b8-541e-4067-98bd-618db9c876cd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "04421f29-af53-4bb3-98d6-ad0ffade1486",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "97211048-4bfa-4438-b44e-2fa56f98987f",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchStart",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}